--- a/buyerratio.ipynb
+++ b/buyerratio.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratio = pd.read_csv(\"C:/Users/anjum/Documents/Exelir workshop/Dataset/BuyerRatio.csv\")"
+    "ratio = pd.read_csv(\"https://github.com/anjumukesh/Python-Workshop/blob/master/BuyerRatio.csv\")"
    ]
   },
   {
